Update 'at3ru3npd-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:ab198490e7889235c390ab9bb26c583feee9707f@sha256:c634b8ee1e55a6a1e33f0d31340ba94e5a172cdbf56eae746d8f870b6f4311b6

--- a/components/at3ru3npd-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/at3ru3npd-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: at3ru3npd-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:ab198490e7889235c390ab9bb26c583feee9707f@sha256:c634b8ee1e55a6a1e33f0d31340ba94e5a172cdbf56eae746d8f870b6f4311b6
+          name: container-image
